# shiny-garbanzo

./: .clang-format  CMakeLists.txt  README.md  build.bat  config.ini  vcpkg.json
cmake/: clang-cxx-dev-tools.cmake
shaders/: batch_quad.frag  batch_quad.vert  default.frag  default.vert
src/: main.c
src/engine/: animation.h  array_list.h  config.h  entity.h  global.c  global.h  input.h  io.h  physics.h  render.h  stb_image.h  time.h  types.h  util.h
src/engine/animation/: animation.c
src/engine/array_list/: array_list.c
src/engine/config/: config.c
src/engine/entity/: entity.c
src/engine/io/: io.c
src/engine/physics/: physics.c  physics_internal.h
src/engine/render/: render.c  render_init.c  render_internal.h  render_util.c
src/engine/time/: time.c
